--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,61 @@
-== README
+== About This Application
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app was born from my personal struggle using Google to find specific
+reaction gifs. Really I just want to drop a couple keywords, tags even,
+into a search box and get the gif I was looking for.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
+I wrote this with Ruby 2.1.2 and PostgreSQL as the DB, you'll need them
+both. Previous versions of Ruby will likely work, though untested for now.
 
 * How to run the test suite
+bundle exec rspec
 
-* Services (job queues, cache servers, search engines, etc.)
+Installing/Running
+------------------
+Clone the repository to your machine and change into the directory.
+```bash
+git clone https://github.com/jtperreault/gif_app.git && cd gif\_app
+```
 
-* Deployment instructions
+Install the required Ruby gems.
+```ruby
+bundle install
+```
 
-* ...
+Copy/Rename the application's config and edit with your credentials.
+```bash
+cp config/application.example.yml config/application.yml
+vim config/application.yml
+```
 
+Create the Database
+```ruby
+rake db:create
+```
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Load the DB schema
+```ruby
+rake db:schema:load
+```
+
+Seed the Database. This will pull your information from application.yml,
+be sure you've edited it with your credentials!
+```ruby
+rake db:seed
+```
+
+Start the development server
+```ruby
+rails server
+```
+
+Visit localhost:3000 to ensure it's running.
+
+Running the Test Suite
+----------------------
+
+You can run the test suite on your local machine with this command
+```ruby
+bundle exec rspec
+```
+
